--- a/diplom-frontend/package.json
+++ b/diplom-frontend/package.json
@@ -18,7 +18,9 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.7.0",
     "@reduxjs/toolkit": "^2.2.4",
+    "dayjs": "^1.11.11",
     "i18next": "^23.11.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.2.0",
